Completed feat Create wallet inlucde address and phrase, Recover wallet with Phrase

--- a/MyEtherWallet/src/App.css
+++ b/MyEtherWallet/src/App.css
@@ -1,42 +1,33 @@
 #root {
-  max-width: 1280px;
+  max-width: 1920px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.App {
+  font-family: "Roboto", sans-serif;
+  width: 500px;
+  height: 100vh;
+  background-color: rgb(28, 32, 36);
+  line-height: 1.5;
 }
 
 .card {
-  padding: 2em;
+  width: 100px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 4px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
-.read-the-docs {
-  color: #888;
+select {
+  width: 100%;
+  color: black;
+}
+
+.flexButton {
+  display: flex;
+}
+
+/* button back */
+.frontPageBottom{
+  
 }
